--- a/app/src/main/res/layout/item_score_row.xml
+++ b/app/src/main/res/layout/item_score_row.xml
@@ -18,9 +18,13 @@
 
     <TextView
         android:id="@+id/tvScoreValue"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="2048"
         android:textSize="18sp"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:ellipsize="end"
+        android:singleLine="true"/>
+
 </LinearLayout>
